--- a/Chart.yaml
+++ b/Chart.yaml
@@ -1,7 +1,10 @@
 apiVersion: v2
-name: did-auth-proxy
+name: did-auth-proxy-helm
 description: A Helm chart for Kubernetes
 
+NOTE: Angluar convention is used for commits, please refer: https://github.com/mathieudutour/github-tag-action"
+
+home: "https://github.com/energywebfoundation/did-auth-proxy-poc"
 # A chart can be either an 'application' or a 'library' chart.
 #
 # Application charts are a collection of templates that can be packaged into versioned archives
@@ -15,7 +18,7 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.1.0
+version: 1.0.0
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
