--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "did-auth-proxy.fullname" . }}
+  name: {{ include "did-auth-proxy-helm.fullname" . }}
   labels:
-    {{- include "did-auth-proxy.labels" . | nindent 4 }}
+    {{- include "did-auth-proxy-helm.labels" . | nindent 4 }}
 spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
   {{- end }}
   selector:
     matchLabels:
-      {{- include "did-auth-proxy.selectorLabels" . | nindent 6 }}
+      {{- include "did-auth-proxy-helm.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       {{- with .Values.podAnnotations }}
@@ -18,13 +18,13 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
-        {{- include "did-auth-proxy.selectorLabels" . | nindent 8 }}
+        {{- include "did-auth-proxy-helm.selectorLabels" . | nindent 8 }}
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      serviceAccountName: {{ include "did-auth-proxy.serviceAccountName" . }}
+      serviceAccountName: {{ include "did-auth-proxy-helm.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
@@ -32,10 +32,31 @@ spec:
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+          env:
+            {{- range $key, $value := .Values.appValues }}
+            - name: {{ $key }}
+              value: {{ $value | quote }}
+            {{- end }}
+            {{- range $key, $value := .Values.opsValues }}
+            - name: {{ $key }}
+              value: {{ $value | quote }}
+            {{- end }}
+          envFrom:
+            {{- if .Values.sealedSecret.enabled }}
+            - secretRef:
+                name: {{ include "did-auth-proxy-helm.fullname" . }}-sealedsecret
+            {{- end }}
+            {{- if .Values.config.enabled }}
+            - secretRef:
+                name: {{ .Values.config.secretRefName }}
+                optional: false
+            - configMapRef:
+                name: {{ .Values.config.configRefName }}
+            {{- end }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
-              containerPort: 80
+              containerPort: {{ .Values.appValues.PORT }}
               protocol: TCP
           livenessProbe:
             httpGet:
