--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "did-auth-proxy.fullname" . }}
+  name: {{ include "did-auth-proxy-helm.fullname" . }}
   labels:
-    {{- include "did-auth-proxy.labels" . | nindent 4 }}
+    {{- include "did-auth-proxy-helm.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "did-auth-proxy.selectorLabels" . | nindent 4 }}
+    {{- include "did-auth-proxy-helm.selectorLabels" . | nindent 4 }}
