--- a/templates/serviceaccount.yaml
+++ b/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "did-auth-proxy.serviceAccountName" . }}
+  name: {{ include "did-auth-proxy-helm.serviceAccountName" . }}
   labels:
-    {{- include "did-auth-proxy.labels" . | nindent 4 }}
+    {{- include "did-auth-proxy-helm.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
