--- a/Chart.yaml
+++ b/Chart.yaml
@@ -23,3 +23,8 @@ version: 0.0.3
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
 appVersion: "0.0.3"
+
+dependencies:
+  - name: nginx
+    version: 9.7.5
+    repository: https://charts.bitnami.com/bitnami
