--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -47,7 +47,7 @@ jobs:
           HELM_EXPERIMENTAL_OCI: 1
         run: |
           aws ecr get-login-password | helm registry login --username AWS --password-stdin ${{ secrets.HELM_REGISTRY }}
-          helm package .
+          helm package --dependency-update .
           CHART_NAME=$( grep 'name:' Chart.yaml | tail -n 1)
           CHART_NAME=${CHART_NAME//*name: /}
           helm push ${CHART_NAME}-${{ steps.tag_version.outputs.new_version }}.tgz oci://${{ secrets.HELM_REGISTRY }}
