--- a/values.yaml
+++ b/values.yaml
@@ -6,11 +6,12 @@ replicaCount: 1
 
 image:
   repository: 098061033856.dkr.ecr.us-west-2.amazonaws.com/did-auth-proxy
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: "latest"
 
-imagePullSecrets: []
+imagePullSecrets: 
+  - name: regcred
 nameOverride: "did-auth-proxy-helm"
 fullnameOverride: "did-auth-proxy-helm"
 
@@ -67,12 +68,15 @@ appValues:
   CACHE_SERVER_LOGIN_PRVKEY: eab5e5ccb983fad7bf7f5cb6b475a7aea95eff0c6523291b0c0ae38b5855459c
   JWT_SECRET: asecretstring
   ACCEPTED_ROLES: role1.roles.app-test2.apps.artur.iam.ewc
-
+  JWT_ACCESS_TTL: 3600
+  JWT_REFRESH_TTL: 86400
 
 opsValues:
   RPC_URL: https://volta-rpc.energyweb.org/
   CACHE_SERVER_URL: https://identitycache-dev.energyweb.org/v1
-
+  REDIS_HOST: did-proxy-auth-redis-master.did-auth.svc.cluster.local
+  REDIS_PORT: 6379
+  REDIS_PASSWORD: redis
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
@@ -103,3 +107,10 @@ sealedSecret:
   enabled: false
   annotations: {}
   encryptedData: {}
+
+########
+# Redis
+
+redis:
+  auth:
+    password: redis
