--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -58,14 +58,14 @@ spec:
             - name: http
               containerPort: {{ .Values.appValues.PORT }}
               protocol: TCP
-          # livenessProbe:
-          #   httpGet:
-          #     path: /
-          #     port: http
-          # readinessProbe:
-          #   httpGet:
-          #     path: /
-          #     port: http
+          livenessProbe:
+            httpGet:
+              path: /auth
+              port: http
+          readinessProbe:
+            httpGet:
+              path: /auth
+              port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
