--- a/values.yaml
+++ b/values.yaml
@@ -6,7 +6,7 @@ replicaCount: 1
 
 image:
   repository: 098061033856.dkr.ecr.us-west-2.amazonaws.com/did-auth-proxy
-  pullPolicy: Always
+  pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: "latest"
 
@@ -40,22 +40,44 @@ securityContext: {}
 service:
   type: ClusterIP
   port: 80
+  
+#example with influx as a backend service
 
 ingress:
-  enabled: false
+  enabled: true
   className: ""
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
+  annotations:
+    kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/server-snippet: |
+      location ~ / {
+          auth_request /token_introspection;
+          proxy_pass http://backend-nginx-influxdb.did.svc.cluster.local:8086;
+      }
+      location = /token_introspection {
+            internal;
+            proxy_method      GET;
+            proxy_set_header  Authorization "$http_authorization";
+            proxy_set_header  Content-Length "";
+            proxy_pass        http://did-auth-proxy-helm.did.svc.cluster.local/auth/token-introspection;
+      }
   hosts:
-    - host: chart-example.local
+    - host: did-auth-proxy-sandbox.energyweb.org
       paths:
-        - path: /
-          pathType: ImplementationSpecific
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
+      - path: /auth
+        pathType: Prefix
+      - path: /auth/login
+        pathType: Prefix
+      - path: /auth/refresh-token
+        pathType: Prefix
+      - path: /auth/token-introspection
+        pathType: Prefix
+      - path: /
+        pathType: Prefix
+
+  tls:
+      - secretName: did-auth-proxy-secret
+        hosts:
+          - did-auth-proxy-sandbox.energyweb.org
 
 config:
   enabled: false
@@ -67,14 +89,14 @@ appValues:
   PORT: 80
   CACHE_SERVER_LOGIN_PRVKEY: eab5e5ccb983fad7bf7f5cb6b475a7aea95eff0c6523291b0c0ae38b5855459c
   JWT_SECRET: asecretstring
-  ACCEPTED_ROLES: role1.roles.app-test2.apps.artur.iam.ewc
+  ACCEPTED_ROLES: didauthtest.roles.didauthkamil.iam.ewc
   JWT_ACCESS_TTL: 3600
   JWT_REFRESH_TTL: 86400
 
 opsValues:
   RPC_URL: https://volta-rpc.energyweb.org/
   CACHE_SERVER_URL: https://identitycache-dev.energyweb.org/v1
-  REDIS_HOST: did-proxy-auth-redis-master.did-auth.svc.cluster.local
+  REDIS_HOST: did-auth-proxy-helm-redis-master.did.svc.cluster.local
   REDIS_PORT: 6379
   REDIS_PASSWORD: redis
 
