--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -66,7 +66,7 @@ jobs:
             CHART_NAME=$( grep 'name:' Chart.yaml | head -n 1)
             CHART_NAME=${CHART_NAME//*name: /}
             helm package .
-            az acr helm push -n ${{ secrets.AZURE_HELM_REGISTRY }} ${CHART_NAME}-${{ steps.tag_version.outputs.new_version }}.tgz
+            az acr helm push -n ${{ secrets.AZURE_HELM_REGISTRY }} ${CHART_NAME}-0.0.11.tgz
       
       # - name: Create a GitHub release
       #   uses: ncipollo/release-action@v1
