--- a/Chart.yaml
+++ b/Chart.yaml
@@ -16,7 +16,7 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.0.12
+version: 0.1.0
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
@@ -27,4 +27,7 @@ appVersion: "0.0.11"
 dependencies:
   - name: redis
     version: 16.4.0
+    repository: https://charts.bitnami.com/bitnami
+  - name: nginx
+    version: 10.2.1
     repository: https://charts.bitnami.com/bitnami
