--- a/values.yaml
+++ b/values.yaml
@@ -44,33 +44,13 @@ service:
 #example with influx as a backend service
 
 ingress:
-  enabled: true
+  enabled: false
   className: ""
   annotations:
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/server-snippet: |
-      location ~ / {
-          auth_request /token_introspection;
-          proxy_pass http://backend-nginx-influxdb.did.svc.cluster.local:8086;
-      }
-      location = /token_introspection {
-            internal;
-            proxy_method      GET;
-            proxy_set_header  Authorization "$http_authorization";
-            proxy_set_header  Content-Length "";
-            proxy_pass        http://did-auth-proxy-helm.did.svc.cluster.local/auth/token-introspection;
-      }
   hosts:
     - host: did-auth-proxy-sandbox.energyweb.org
       paths:
-      - path: /auth
-        pathType: Prefix
-      - path: /auth/login
-        pathType: Prefix
-      - path: /auth/refresh-token
-        pathType: Prefix
-      - path: /auth/token-introspection
-        pathType: Prefix
       - path: /
         pathType: Prefix
 
@@ -133,3 +113,64 @@ sealedSecret:
 redis:
   auth:
     password: redis
+
+########
+# nginx
+
+nginx:
+  fullnameOverride: "did-auth-proxy-nginx"
+  service:
+    type: ClusterIP
+  # ngxin config for ngxin service
+  serverBlock: |-
+    server {
+      listen 0.0.0.0:8080;
+      server_name  _;
+      location ~ ^/(backend-docs|backend-health) {
+          proxy_pass http://backend-server.namespace.svc.cluster.local;
+      }
+      location ~ ^/auth {
+          proxy_pass http://did-auth-proxy-helm.namespace.svc.cluster.local;
+      }
+      location ~ / {
+          auth_request /token_introspection;
+          proxy_pass http://backend-server.namespace.svc.cluster.local;
+      }
+      location = /token_introspection {
+            internal;
+            proxy_method      GET;
+            proxy_set_header  Authorization "$http_authorization";
+            proxy_set_header  Content-Length "";
+            proxy_pass        http://did-auth-proxy-helm.namespace.svc.cluster.local/auth/token-introspection;
+      }
+    }
+
+  ingress:
+    enabled: false
+    annotations: 
+      kubernetes.io/ingress.class: azure/application-gateway
+      appgw.ingress.kubernetes.io/ssl-redirect: "true"
+    hostname: ddhub-dev.energyweb.org
+    pathType: Prefix
+    path: /
+    tls: false
+    extraTls:
+      - hosts:
+        - ddhub-dev.energyweb.org
+        secretName: dsb-tls-secret
+
+  livenessProbe:
+    enabled: false
+
+  readinessProbe:
+    enabled: false
+
+  customLivenessProbe:
+    httpGet:
+      path: /auth
+      port: http
+
+  customReadinessProbe:
+    httpGet:
+      path: /auth
+      port: http
