--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -46,11 +46,11 @@ jobs:
         env:
           HELM_EXPERIMENTAL_OCI: 1
         run: |
-          aws ecr get-login-password | helm registry login --username AWS --password-stdin ${{ secrets.HELM_REGISTRY }}
+          aws ecr-public get-login-password | helm registry login --username AWS --password-stdin public.ecr.aws
           helm package --dependency-update .
           CHART_NAME=$( grep 'name:' Chart.yaml | head -n 1)
           CHART_NAME=${CHART_NAME//*name: /}
-          helm push ${CHART_NAME}-${{ steps.tag_version.outputs.new_version }}.tgz oci://${{ secrets.HELM_REGISTRY }}
+          helm push ${CHART_NAME}-${{ steps.tag_version.outputs.new_version }}.tgz oci://public.ecr.aws/${{ secrets.HELM_REGISTRY }}
 
       - name: Azure Login
         uses: azure/login@v1
