--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -58,15 +58,17 @@ jobs:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: Azure CLI deploy to ACR
-        uses: azure/CLI@v1
+        uses: azure/CLI@v2
         with:
-          azcliversion: 2.34.1
+          azcliversion: latest
           inlineScript: |
-            az acr helm install-cli --client-version 3.6.3 --yes
+            az acr helm install-cli --client-version 3.8.0 --yes
             CHART_NAME=$( grep 'name:' Chart.yaml | head -n 1)
             CHART_NAME=${CHART_NAME//*name: /}
             helm package .
-            az acr helm push -n ${{ secrets.AZURE_HELM_REGISTRY }} ${CHART_NAME}-${{ steps.tag_version.outputs.new_version }}.tgz
+            export HELM_EXPERIMENTAL_OCI=1
+            helm registry login ${{ secrets.HELM_REGISTRY }} --username ${{ secrets.AZURE_REGISTRY_USERNAME }} --password ${{ secrets.AZURE_REGISTRY_PASSWORD }}
+            helm push ${CHART_NAME}-${{ steps.tag_version.outputs.new_version }}.tgz oci://${{ secrets.AZURE_HELM_REGISTRY }}/helm
       
       - name: Create a GitHub release
         uses: ncipollo/release-action@v1
